add responsive mobile

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <base href="#">
   <!-- <base href="/"> -->
 
   <meta charset="UTF-8">
@@ -23,7 +24,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="myportowebflutter">
+  <meta name="apple-mobile-web-app-title" content="Rizky Nur Hidayat">
   <link rel="apple-touch-icon" href="logo-192.png">
 
   <!-- Favicon -->
